cursor contrast fix, animation fix fix

--- a/src/sass/utils/_cursor.scss
+++ b/src/sass/utils/_cursor.scss
@@ -37,6 +37,10 @@ html {
   background-color: #ff6b017d;
 }
 
+.dark-bcg {
+  background-color: rgba(255, 255, 255, 0.468);
+}
+
 .cursorinnerhover {
   width: 50px;
   height: 50px;
